--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "materialize-css": "^0.97.6",
     "page": "^1.7.1",
     "pug": "^2.0.0-alpha7",
+    "superagent": "^2.0.0-alpha.3",
     "title": "^1.0.0",
     "yo-yo": "^1.2.0"
   },
