--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/daguiheso/MyGram#readme",
   "dependencies": {
+    "axios": "^0.11.1",
     "empty-element": "^1.0.0",
     "express": "^4.13.4",
     "intl": "^1.2.2",
