--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pug": "^2.0.0-alpha7",
     "superagent": "^2.0.0-alpha.3",
     "title": "^1.0.0",
+    "webcamjs": "^1.0.9",
     "yo-yo": "^1.2.0"
   },
   "devDependencies": {
