--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.13.4",
     "file-extension": "^2.0.1",
     "intl": "^1.2.2",
+    "intl-messageformat": "^1.3.0",
     "intl-relativeformat": "^1.3.0",
     "materialize-css": "^0.97.6",
     "multer": "^1.1.0",
