--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/daguiheso/MyGram#readme",
   "dependencies": {
+    "aws-sdk": "^2.4.13",
     "axios": "^0.11.1",
     "empty-element": "^1.0.0",
     "express": "^4.13.4",
@@ -26,6 +27,7 @@
     "intl-relativeformat": "^1.3.0",
     "materialize-css": "^0.97.6",
     "multer": "^1.1.0",
+    "multer-s3": "^2.3.2",
     "page": "^1.7.1",
     "pug": "^2.0.0-alpha7",
     "superagent": "^2.0.0-alpha.3",
