--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "aws-sdk": "^2.4.13",
     "axios": "^0.11.1",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "empty-element": "^1.0.0",
     "express": "^4.13.4",
+    "express-session": "^1.14.2",
     "file-extension": "^2.0.1",
     "intl": "^1.2.2",
     "intl-messageformat": "^1.3.0",
