Installation, habilitation and strategies of passportJs

--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "multer": "^1.1.0",
     "multer-s3": "^2.3.2",
     "page": "^1.7.1",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-alpha7",
     "superagent": "^2.0.0-alpha.3",
     "title": "^1.0.0",
