--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
+    "MyGram-client": "daguiheso/MyGram-client",
     "pug": "^2.0.0-alpha7",
     "superagent": "^2.0.0-alpha.3",
     "title": "^1.0.0",
