--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/daguiheso/MyGram#readme",
   "dependencies": {
+    "MyGram-client": "daguiheso/MyGram-client",
     "aws-sdk": "^2.4.13",
     "axios": "^0.11.1",
     "body-parser": "^1.15.2",
@@ -28,6 +29,7 @@
     "intl": "^1.2.2",
     "intl-messageformat": "^1.3.0",
     "intl-relativeformat": "^1.3.0",
+    "jsonwebtoken": "^7.1.9",
     "materialize-css": "^0.97.6",
     "multer": "^1.1.0",
     "multer-s3": "^2.3.2",
@@ -35,7 +37,6 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
-    "MyGram-client": "daguiheso/MyGram-client",
     "pug": "^2.0.0-alpha7",
     "superagent": "^2.0.0-alpha.3",
     "title": "^1.0.0",
